--- a/main.css
+++ b/main.css
@@ -1,7 +1,35 @@
 body {
     background-image: url(./img/background.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 p {
     color: aliceblue;
+}
+
+#div-1 {
+    background-color: grey;
+    display: flex;
+    justify-content: space-evenly;
+    border-radius: 10%;
+}
+
+.Carte-Chauffeur {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: black;
+    border-radius: 10%;
+}
+
+img {
+    max-width: 200px;
+    max-height: 150px;
+    border-radius: 10%;
+}
+
+#div-2 {
+    height: 350px;
 }
